Prevent long versions that may break the layout

--- a/pylode/style/pylode.css
+++ b/pylode/style/pylode.css
@@ -1,7 +1,7 @@
         #pylode {
             position: fixed;
             top: 130px;
-            left: -60px;
+            left: -70px;
             font-size: small;
             transform: rotate(-90deg);
             color: grey;
